// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders as expected when passing a different className 1`] = `
[
  <input
    checked={true}
    className="lab-checkbox lab-checkbox--purple"
    id="test-checkbox"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    >
      <span
        className="lab-icon lab-icon--check lab-icon--white lab-icon--small"
      />
    </span>
    test checkbox
  </label>,
]
`;

exports[`Checkbox renders as expected when passing disabled as true 1`] = `
[
  <input
    checked={false}
    className="lab-checkbox "
    disabled={true}
    id="test-checkbox"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    />
    test checkbox
  </label>,
]
`;

exports[`Checkbox renders as expected when passing indeterminate 1`] = `
[
  <input
    checked={false}
    className="lab-checkbox lab-checkbox--purple"
    id="test-checkbox"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    >
      <span
        className="lab-icon lab-icon--minus lab-icon--white lab-icon--small"
      />
    </span>
    test checkbox
  </label>,
]
`;

exports[`Checkbox renders as expected when passing indeterminate as true 1`] = `
[
  <input
    checked={true}
    className="lab-checkbox "
    id="test-checkbox"
    name="test-checkbox"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    >
      <span
        className="lab-icon lab-icon--minus lab-icon--white lab-icon--small"
      />
    </span>
    test checkbox
  </label>,
]
`;

exports[`Checkbox renders with base props 1`] = `
[
  <input
    checked={false}
    className="lab-checkbox "
    id="test-checkbox"
    name="test-checkbox-group"
    onChange={[Function]}
    type="checkbox"
  />,
  <label
    className="lab-checkbox__label"
    htmlFor="test-checkbox"
  >
    <span
      className="lab-checkbox__box"
    />
    test checkbox
  </label>,
]
`;
